--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,5 @@
 {
-  "extends": "next/core-web-vitals",
-  "root": true
+	"extends": ["next", "next/core-web-vitals", "prettier"],
+	"root": true,
+  "plugins": ["prettier","cypress"]
 }
