--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "8.9.0",
     "eslint-config-next": "12.0.10",
     "eslint-plugin-cypress": "^2.12.1",
+    "eslint-config-prettier": "^1.0.1",
     "husky": "^7.0.4",
     "prettier": "^2.5.1",
     "typescript": "4.3.2"
