--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
 	"extends": ["next", "next/core-web-vitals", "prettier"],
 	"root": true,
-  "plugins": ["prettier","cypress"]
+  "plugins": ["cypress"]
 }
