--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "scripts": {
+    "postinstall": "husky install",
     "prepare": "husky install",
     "dev": "next -p 3000",
     "build": "next build",
